allow composer packages to be updated also
